# docchat-ai

./: .gitignore  README.md  api.py  evaluation.py  format_qa_instructions.py  prepare_qa_data.py  prepare_toxic_data.py  pyproject.toml  train.py  ui.py
data/processed/: qa_data.json  qa_instructions.csv
data/raw/: documents.txt
